EMAILPLT-32:  Rendering issues on IE7 or 'Compatability Mode'
git-svn-id: https://source.jasig.org/portlets/email-preview/trunk@22868 f5dbab47-78f9-eb45-b975-e544023573eb

--- a/src/main/webapp/css/email.css
+++ b/src/main/webapp/css/email.css
@@ -46,9 +46,9 @@
 
 .loading-message { height: 150px; background: url(../images/loading.gif) no-repeat center center; }
 
-.select { width: 16px; text-align: center; padding: 0.1em 0.5em; }
+.select { width: 16px; *width: 30px; text-align: center; padding: 0.1em 0.5em; }
 
-.flags-header { width: 16px; text-align: right; }
+.flags-header { width: 16px; *width: 30px; text-align: right; }
 .flags-header .flags-span { display:inline; background: url(../rs/famfamfam/silk/1.3/flag_red.png) no-repeat; padding-left: 16px; text-align: right; }
 .flags-header .attached-span { display:inline; background: url(../rs/famfamfam/silk/1.3/attach.png) no-repeat; padding-left: 16px; text-align: right; }
 .flags { padding: 0.1em 1em; }
